# CleytoCoin

./: .gitignore  Cargo.toml  README.md  \  backup_get_utxos  output  private.pem  public.pem  todo.txt
src/: TODO.txt  chain.rs  configs.rs  lib.rs  main.rs  node.rs
src/chain/: block.rs  mod.rs  ordered_vector.rs  testes.rs  transaction.rs  utils.rs  utxo.rs  wallet.rs  wallet_pk.rs
src/error_handling/: error.rs  mod.rs  result.rs  transaction_error.rs
src/node/: config.toml  data.rs  example_http_get.yml  logger.rs  mod.rs  resolve_requests.rs  thread_pool.rs  ui.rs  utils.rs
src/node/resolve_requests/: endpoints.rs  errors.rs  helpers.rs  messages.rs  methods.rs  mod.rs
src/node/resolve_requests/messages/: message_struct.rs  mod.rs
src/node/resolve_requests/messages/process/: check_exists.rs  get_data.rs  mod.rs  new_node.rs  process_new_block.rs
src/node/static/: 200.html  204.html  400.html  404.html  405.html  500.html  error.html  index.html  success.html
tests/: create_block_and_add_chain.rs  create_headless_node.rs  create_transaction.rs  create_wallet.rs  create_wallets_and_send_transaction.rs  node.rs  requests.rs  sign_and_verify_transactioninfo.rs  test_chain.rs  test_coin_selection.rs  test_ordered_vec.rs  transactions.rs  wallet_utxos.rs
wallets/receiver/: private.pem  public.pem
wallets/sender/: private.pem  public.pem
